Replace 'JavaScript' with 'Power BI' in skills

--- a/_layouts/minimal.html
+++ b/_layouts/minimal.html
@@ -277,7 +277,7 @@
               <div class="skill-bar"><div class="skill-fill" style="--fill: 80%"></div></div>
             </div>
             <div class="skill-item">
-              <span class="skill-name">JavaScript</span>
+              <span class="skill-name">Power BI</span>
               <div class="skill-bar"><div class="skill-fill" style="--fill: 70%"></div></div>
             </div>
           </div>
