--- a/_layouts/minimal.html
+++ b/_layouts/minimal.html
@@ -135,7 +135,9 @@
         <div class="timeline-row-top">
           <div class="tl-item" style="left: 10%;">
             <div class="tl-card">
-              <div class="tl-logo nu">NU</div>
+              <div class="tl-logo">
+                <img src="/assets/images/logos/nu-logo.jpg" alt="Nazarbayev University">
+              </div>
               <span class="tl-date edu">2019 - 2023</span>
               <h3 class="tl-title">B.A. Economics</h3>
               <p class="tl-company">Nazarbayev University</p>
@@ -147,7 +149,9 @@
 
           <div class="tl-item" style="left: 75%;">
             <div class="tl-card">
-              <div class="tl-logo columbia">CU</div>
+              <div class="tl-logo">
+                <img src="/assets/images/logos/columbia-logo.png" alt="Columbia University">
+              </div>
               <span class="tl-date edu">Sep 2024 - 2025</span>
               <h3 class="tl-title">M.S. Applied Analytics</h3>
               <p class="tl-company">Columbia University</p>
@@ -177,7 +181,9 @@
             <div class="tl-dot work"></div>
             <div class="tl-stem work"></div>
             <div class="tl-card">
-              <div class="tl-logo ey">EY</div>
+              <div class="tl-logo">
+                <img src="/assets/images/logos/ey-logo.png" alt="Ernst&Young">
+              </div>
               <span class="tl-date work">Dec 2022 - Jun 2023</span>
               <h3 class="tl-title">Intern Consultant</h3>
               <p class="tl-company">Ernst & Young</p>
@@ -189,7 +195,9 @@
             <div class="tl-dot work"></div>
             <div class="tl-stem work"></div>
             <div class="tl-card">
-              <div class="tl-logo nbk">NBK</div>
+              <div class="tl-logo">
+                <img src="/assets/images/logos/nbk-logo.jpg" alt="National Bank of Kazakhstan">
+              </div>
               <span class="tl-date work">Jul 2023 - Jun 2024</span>
               <h3 class="tl-title">Analyst</h3>
               <p class="tl-company">National Bank of Kazakhstan</p>
