--- a/_layouts/minimal.html
+++ b/_layouts/minimal.html
@@ -209,7 +209,9 @@
             <div class="tl-dot work current"></div>
             <div class="tl-stem work"></div>
             <div class="tl-card">
-              <div class="tl-logo nbk">NBK</div>
+              <div class="tl-logo">
+                <img src="/assets/images/logos/nbk-logo.jpg" alt="National Bank of Kazakhstan">
+              </div>
               <span class="tl-date work">Jul 2024 - Present</span>
               <h3 class="tl-title">Chief Analyst</h3>
               <p class="tl-company">National Bank of Kazakhstan</p>
